--- a/templates/assets/navbar.html
+++ b/templates/assets/navbar.html
@@ -9,8 +9,10 @@
             <span></span>
         </button>
     </div>
-    <div class="sidebar-header">
-        <h1 class="logo">RAD</h1>
+    <div class="sidebar-header d-flex">
+        <h1 class="logo"><i class="fab mx-1 fa-think-peaks"></i></h1>
+        <h1 class="logo"><i class="fab mx-1 fa-think-peaks"></i></h1>
+        <h1 class="logo"><i class="fab mx-1 fa-think-peaks"></i></h1>
     </div>
     <span class="font-weight-bold">
         {% if request.user.is_authenticated %}
