--- a/templates/assets/navbar.html
+++ b/templates/assets/navbar.html
@@ -11,8 +11,8 @@
     </div>
     <div class="sidebar-header d-flex">
         <h1 class="logo"><i class="fab mx-1 fa-think-peaks"></i></h1>
-        <h1 class="logo"><i class="fab mx-1 fa-think-peaks"></i></h1>
-        <h1 class="logo"><i class="fab mx-1 fa-think-peaks"></i></h1>
+        <h1 class="logo"><i class="fab mx-1 fa-think-peaks text-danger"></i></h1>
+        <h1 class="logo"><i class="fab mx-1 fa-think-peaks text-primary"></i></h1>
     </div>
     <span class="font-weight-bold">
         {% if request.user.is_authenticated %}
