--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -20,8 +20,8 @@
 {% block content %}
 <section class="home d-flex align-items-center mb-5">
     <div class="container">
-        <div class="row align-items-center justify-content-center animated fadeInUp my-auto slow">
-            <div class="" data-animation="">
+        <div class="row align-items-center justify-content-center animated fadeInUp delay-2s my-auto slower">
+            <div class="">
                 <span class="text-white text-center">NEW ARRIVALS & RESTOCKS</span>
                 <h4 class="text-white font-weight-bold text-center mb-4">JUST IN.</h4>
                 <div class="d-flex align-items-center justify-content-center">
