--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,7 +13,7 @@ body {
 .home {
     width: 100%;
     height: 70vh;
-    background-image: url('../../static/image/background/background.jpg');
+    background-image: url('../image/background/background.jpg');
     background-position: center top;
     background-size: cover;
 }
