--- a/templates/shop/index.html
+++ b/templates/shop/index.html
@@ -20,7 +20,7 @@
 {% block content %}
 <section class="home d-flex align-items-center mb-5">
     <div class="container">
-        <div class="row align-items-center justify-content-center animated fadeInUp delay-2s my-auto slower">
+        <div class="row align-items-center justify-content-center animate__animated animate__fadeInUp animate__delay-2s my-auto animate__slower">
             <div class="">
                 <span class="text-white text-center">NEW ARRIVALS & RESTOCKS</span>
                 <h4 class="text-white font-weight-bold text-center mb-4">JUST IN.</h4>
